--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,9 @@
-font-family: 'Anton', sans-serif;
+/* font-family: 'Anton', sans-serif;
 font-family: 'IBM Plex Sans', sans-serif;
 font-family: ,'Roboto' sans-serif;
-font-family: 'Segoe UI', sans-serif;
+font-family: 'Segoe UI', sans-serif; */
 body{
-    font-family: ;
+    font-family: 15px;
     margin-left: 2%;
 }
 
